# SDL_OOP

./: .clangd  CMakeLists.txt  CMakePresets.json  Readme.md  build.bat  install.bat  vcpkg.json
src/: main.cpp
src/pTS/: pTSpace.cpp  pTSpace.h
src/pTS/core/: Engine.cpp  Engine.h  Timer.cpp  Timer.h
src/pTS/support/: Singleton.cpp  Singleton.h  SupportExporter.h
